<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/HomeFragment">

    <fragment
        android:id="@+id/HomeFragment"
        android:label="@string/fragment_label_home"
        android:name="com.cyb3rko.pincredible.fragments.HomeFragment"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/home_to_pinviewer"
            app:destination="@id/PinViewerFragment"
            app:enterAnim="@anim/slide_in"
            app:popExitAnim="@anim/slide_out" />

        <action
            android:id="@+id/home_to_pincreator"
            app:destination="@id/PinCreatorFragment"
            app:enterAnim="@anim/shrink_in"
            app:popExitAnim="@anim/shrink_out" />

        <action
            android:id="@+id/home_to_analysis"
            app:destination="@id/AnalysisFragment"
            app:enterAnim="@anim/shrink_in"
            app:popExitAnim="@anim/shrink_out" />

    </fragment>

    <fragment
        android:id="@+id/PinViewerFragment"
        android:label="@string/fragment_label_pin_viewer"
        android:name="com.cyb3rko.pincredible.fragments.PinViewerFragment"
        tools:layout="@layout/fragment_pin_viewer">

        <argument
            android:defaultValue=""
            android:name="pin"
            app:argType="string" />

        <action
            android:id="@+id/pinviewer_to_home"
            app:destination="@id/HomeFragment" />

    </fragment>

    <fragment
        android:id="@+id/PinCreatorFragment"
        android:label="@string/fragment_label_pin_creator"
        android:name="com.cyb3rko.pincredible.fragments.PinCreatorFragment"
        tools:layout="@layout/fragment_pin_creator">

        <action
            android:id="@+id/pinCreator_to_home"
            app:destination="@id/HomeFragment" />

    </fragment>

    <fragment
        android:id="@+id/AnalysisFragment"
        android:label="@string/fragment_label_analysis"
        android:name="com.cyb3rko.pincredible.fragments.AnalysisFragment"
        tools:layout="@layout/fragment_analysis">

        <action
            android:id="@+id/analysis_to_home"
            app:destination="@id/HomeFragment" />

    </fragment>

</navigation>
